# Project

./: .gitignore
task_1/: README.md  pyproject.toml
task_1/task_1/: .env  main.py  test.py
task_2/: pyproject.toml
task_2/task_2/: .env  database.py  jwt_auth.py  main.py  models.py  schemas.py
task_3/: alembic.ini  pyproject.toml
task_3/alembic/: env.py
task_3/alembic/versions/: 27a507dd5bcf_second_migration.py  31dff17d9b0a_second.py  3489a392f57a_first.py  531e95db785c_migrations_custom.py  619507ec3ffa_add_relationship_between_user_and_todo.py  82b72e7d7c40_migrations.py
task_3/task_3/: auth.py  database.py  main.py  models.py  schemas.py  tokens.py
task_3/task_3/auth/: auth.py  hashing.py  tokens.py
task_3/task_3/router/: todo.py  user.py
task_4/: alembic.ini  pyproject.toml
task_4/alembic/: env.py
task_4/alembic/versions/: ac12f6d05231_second_migration.py  dc13bf25bdbd_table_created.py
task_4/task_4/: .env  auth.py  database.py  main.py  models.py  schemas.py
