[tool.poetry]
name = "task-4"
version = "0.1.0"
description = ""
authors = ["Laxman <laxman.kunwar@codavatar.tech>"]
readme = "README.md"
packages = [{include = "task_4"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
passlib = {extras = ["bcrypt]"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.0.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
